--- a/U5kManServer/appweb/styles/uv5ki-styles.css
+++ b/U5kManServer/appweb/styles/uv5ki-styles.css
@@ -1253,3 +1253,47 @@ a.disabled {
 .ntp_info_modal{
     width: 125%;
 }
+
+/** Pantalla de LOGIN */
+.cabecera {
+    /*    border: 1px solid #4A7729;*/
+    border: 1px solid #4A7729;
+    /*background-color: #B1DCB4;*/
+    color: #4A7729;
+    margin: 10px 2% 10px 2%;
+}
+
+.logo {
+    height: 85px;
+    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('/images/corporativo-a.png');
+    margin: 0 0 0 0;
+}
+
+.title {
+    height: 70px;
+    margin: 10px 0 0 0;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+}
+
+.fecha {
+    height: 70px;
+    margin: 10px 0 0 0;
+    padding-top: 10px;
+    font-size: 15px;
+}
+
+.login {
+    margin: 5% 30% 5% 30%;
+}
+.pie {
+    height: 30px;
+    padding-top: 5px;
+    text-align: center;
+}
+
