--- a/U5kManServer/appweb/app/views/Uv5kiman-superv.html
+++ b/U5kManServer/appweb/app/views/Uv5kiman-superv.html
@@ -246,7 +246,9 @@
                         </tr>
                         <tr>
                             <td colspan="2" class="text-center">
-                                <button id="startstopsacta" type="button" ng-click="ctrl.SactaServiceStartStop(ctrl.std.sactaservicerunning)"
+                                <button id="startstopsacta" type="button" 
+                                        ng-click="ctrl.SactaServiceStartStop(ctrl.std.sactaservicerunning)"
+                                        ng-disabled="!ctrl.optionAllowed()"
                                         class="{{ctrl.SactaServiceStd(ctrl.std.sactaservicerunning).clase}}">
                                     {{ctrl.SactaServiceStd(ctrl.std.sactaservicerunning).text}}
                                 </button>
